<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_adminPanel"
            android:icon="@drawable/password"
            android:title="@string/menu_admin_panel" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacy" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login"
                android:title="@string/menu_login" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/rate_us"
                android:title="@string/menu_rate_us" />
            <item
                android:id="@+id/nav_exits"
                android:icon="@drawable/logout"
                android:title="@string/menu_exits" />
        </menu>
    </item>

</menu>
